--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     build:
       context: .
       dockerfile: console/Dockerfile
-    command: ["-u $URL", "-g$GAMEID", "-q", "-m $MAXTEAMS"]
+    command: ["-u $URL", "-g$GAMEID", "-q", "-m $MAXTEAMS", "-n straight"]
     network_mode: "host"
     volumes:
       - ./maps:/maps
@@ -16,7 +16,7 @@ services:
     build:
       context: .
       dockerfile: console/Dockerfile
-    command: ["-u $URL", "-g$GAMEID", "-o 1", "-s 200", "-m $MAXTEAMS"]
+    command: ["-u $URL", "-g$GAMEID", "-o 1", "-s 200", "-m $MAXTEAMS", "-n quick"]
     network_mode: "host"
     volumes:
       - ./maps:/maps
@@ -25,7 +25,7 @@ services:
     build:
       context: .
       dockerfile: console/Dockerfile
-    command: ["-u $URL", "-g$GAMEID", "-m $MAXTEAMS"]
+    command: ["-u $URL", "-g$GAMEID", "-m $MAXTEAMS", "-n smart"]
     network_mode: "host"
     volumes:
       - ./maps:/maps
