--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 URL=https://snow-rover.azurewebsites.net/
 #URL=http://host.docker.internal:7287/
 #URL=https://localhost:7287/
-GAMEID='az'
-MAXTEAMS=20  
+GAMEID='bj'
+MAXTEAMS=30  
